# endian_trait

./: Cargo.toml  README.md
endian_trait_derive/: Cargo.toml
endian_trait_derive/src/: lib.rs
src/: arrays.rs  lib.rs
